--- a/service-a/Dockerfile
+++ b/service-a/Dockerfile
@@ -1,8 +1,8 @@
-FROM golang:1.20
+FROM golang:1.23.0
 
 WORKDIR /app
 
-COPY ../go.mod ../go.sum ./
+COPY go.mod go.sum ./
 RUN go mod download
 
 COPY . .
